--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -17,11 +17,11 @@ mybatis.type-aliases-package=io.recommendation.common.bean
 #spring.datasource.schema=classpath*:sql/schema.sql\
 spring.datasource.type=org.apache.commons.dbcp.BasicDataSource
 #spring.datasource.url=jdbc:mysql://${mysqlServer}/${database}?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-spring.datasource.url=jdbc:mysql://192.168.101.32/tera_auto_cky?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://192.168.102.24/recommendation?useUnicode=true&characterEncoding=UTF-8
 #spring.datasource.url=jdbc:mysql://10.217.4.223/tera_auto?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 #spring.datasource.password=riant-07.net
-spring.datasource.password=tongfang
+spring.datasource.password=password
 spring.datasource.driver-class-names=com.mysql.jdbc.Driver
 
 spring.datasource.initialSize=0
