--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>common</module>
         <module>recommend_core</module>
         <module>persist</module>
+        <module>stream</module>
     </modules>
 
     <properties>
